new pics for home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -53,10 +53,11 @@
 
             <div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto text-white">
-                    <!--accessing extra-->
+                    <!--accessing extra
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/customizedAssessment">extra<span class="sr-only"></span></a>
-                        </li>
+                    </li>
+                    -->
                 
                     <!--
                     <li class="nav-item">
@@ -121,8 +122,14 @@
         <h2 class ="text-center fs-4 fw-bold">Find Mental Health Events Near You !</h2>
         <br>
         <br>
+        <img src="/resources/healthandWellness.png" class="img-fluid" alt="healthandWellness">
+        <br>
+        <br>
+        <br>
+        <img src="/resources/healthandWellness3.png" class="img-fluid" alt="healthandWellness">
         <br>
 
+<!--
         <div class="container mx-auto">
         <div id="carouselExampleIndicators" class="carousel slide carousel-container h-25 d-inline-block mx-auto carousel-fade" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -152,8 +159,8 @@
           </div>
         </div>
 
-
-        <!-- CAROUSEL SECTION-->
+-->
+        <!-- CAROUSEL SECTION
     <div class="carousel-container h-25 d-inline-block mx-auto">
     <div class="carousel-scale">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -171,7 +178,7 @@
     </div>
     </div>
     </div>
-    <br>
+    -->
     <br>
         <div class="card">
             <div class="card-body">
@@ -181,6 +188,7 @@
             </blockquote>
             </div>
         </div>
+        <br>
         <br>
 
       <footer class="py-3 my-4">
