--- a/views/survey.ejs
+++ b/views/survey.ejs
@@ -437,7 +437,7 @@
                     <button class="btn mx-auto btn btn-outline-success" type="submit">Submit</button>
                 </div>
                 <br>
-                <form action="/adminDashboard" method="get" class="d-grid gap-2 d-md-block justify-content-md-end">
+                <form action="/" method="get" class="d-grid gap-2 d-md-block justify-content-md-end">
                     <button type="submit" class="btn btn-outline-danger" data-bs-toggle="button">Back</button>
                 </form>
             </div>
