--- a/views/customizedAssessment.ejs
+++ b/views/customizedAssessment.ejs
@@ -98,7 +98,7 @@
                 <h2 id="stat1" class="hidden">&bull; Depression</h2>
                 <h2 id="stat2" class="hidden">&bull; Worry</h2>
                 <h2 id="stat3" class="hidden">&bull; Distraction</h2>
-                <h1>when compared with others generations.</h1>
+                <h1>when compared to other generations.</h1>
                 <br>
     
                 <h1>Here are recommendations to improve your health: </h1>
